# torch-aac

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VERSIONS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmark/: README.md  bench_quality.py  bench_throughput.py
benchmarks/: cuda_validation.py  real_audio_benchmark.py  stereo_test.py  throughput_test.py
benchmarks/results/: README.md  bench_bach10.json  bench_bach10_cpu.json  bench_bach10_v7.json  bench_librispeech.json  bench_librispeech_cpu.json  bench_librispeech_v10.json  bench_librispeech_v7.json  bench_librispeech_v8.json  bench_musdb18.json  bench_musdb18_cpu.json  bench_musdb18_v10.json  bench_musdb18_v7.json  bench_musdb18_v8.json  bench_musdb18_v9.json  real_audio_results.json  real_audio_results_v2.json  real_audio_results_v3.json  rtx_3080ti_results.txt  rtx_3090_results.txt  stereo_test_output.txt  stereo_test_output_v7.txt  stereo_test_output_v8.txt  stereo_test_output_v9.txt  throughput_test_output_v10.txt  throughput_test_output_v9.txt
benchmarks/test_audio/: README.md
benchmarks/test_audio/stereo/: AM_Contra___Heart_Peripheral_10s.flac  BKS___Bulldozer_10s.flac  Carlos_Gonzalez___A_Place_For_Us_10s.flac  README.md
docs/: README.md  technical.md
docs/internal/: assumptions.md
examples/: README.md  basic_encode.py  compare_quality.py  demo.ipynb  differentiable_training.py
tests/: README.md  conftest.py  test_batch.py  test_differentiable.py  test_encoder.py  test_filterbank.py  test_psychoacoustic.py  test_regression.py  test_short_blocks.py
torch_aac/: README.md  __init__.py  __main__.py  config.py  differentiable.py  encoder.py
torch_aac/cpu/: README.md  __init__.py  _bitwriter.c  _bitwriter_native.py  bitstream.py  huffman.py  scalefactor.py
torch_aac/cpu_fallback/: __init__.py
torch_aac/gpu/: README.md  __init__.py  block_switch.py  filterbank.py  huffman_encode.py  huffman_select.py  ms_stereo.py  pns.py  psychoacoustic.py  quantizer.py  rate_control.py
torch_aac/integrations/: README.md  __init__.py  torchaudio.py
torch_aac/tables/: README.md  __init__.py  huffman_tables.py  sfb_tables.py  window_tables.py
torch_aac/utils/: __init__.py  audio_io.py  device.py
